compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__type_imported_as_value.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 2097
expression: "import rakun/wibble.{Wibble}"
---
----- SOURCE CODE
-- rakun/wibble.rakun
pub record Wibble {
               Wobble
             }

-- main.rakun
import rakun/wibble.{Wibble}

----- ERROR
error: Unknown module value
  ┌─ /src/one/two.rakun:1:22
  │
1 │ import rakun/wibble.{Wibble}
  │                      ^^^^^^ Did you mean `type Wibble`?

`Wibble` is only a type, it cannot be imported as a value.
